--- a/style.css
+++ b/style.css
@@ -56,7 +56,6 @@ html {
 
 /* bottom */
 #bottom {
-    border: 2px solid red;
     height: calc(100vh - 200px);
     overflow: scroll;
     background-color: var(--bg);
@@ -79,9 +78,14 @@ html {
 .gtitle {
     position: relative;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 24px;
     line-height: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    color: var(--c1);
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
+    border-bottom: 3px solid var(--c1);
+    width: fit-content;
+    padding: 5px 15px;
 }
 
 .card-wrapper {
@@ -95,7 +99,7 @@ html {
     background-color: var(--bg);
     margin-right: 20px;
     margin-bottom: 20px;
-    height: 150px;
+    height: 260px;
     width: 150px;
     border-radius: 10px;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, .15);
@@ -103,11 +107,27 @@ html {
     transition: all .2s ease-in-out;
 }
 
+.card-icon-div {
+    width: 100%;
+    height: 100px;
+    text-align: center;
+}
+
+.card-icon {
+    height: 100%;
+    opacity: .8;
+}
+
 .card-title {
     font-size: 20px;
+    font-family: 'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    letter-spacing: 2px;
     text-align: center;
     padding: 10px;
     background: rgba(0, 0, 0, .05);
+    color: var(--c1);
+    text-shadow: 2px 2px 2px var(--c3);
 }
 
 .card-sep {
@@ -129,4 +149,5 @@ html {
     padding: 10px;
     color: #666;
     text-align: center;
+    padding-top: 20px;
 }
