--- a/style.css
+++ b/style.css
@@ -51,10 +51,22 @@ html {
 
 /* bottom */
 #bottom {
-    height: calc(100vh - 120px);
-    overflow: scroll;
-    background-color: var(--bg);
+    z-index: 1;
+    /* height: calc(100vh - 120px); */
+    /* overflow: scroll; */
     padding: 20px 40px;
+}
+
+#bottom-img {
+    z-index: -1;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('./img/bg1.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 /* row */
@@ -68,6 +80,7 @@ html {
     padding: 20px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, .15);
     border-radius: 10px;
+    backdrop-filter: blur(8px);
 }
 
 .gtitle {
@@ -98,7 +111,7 @@ html {
     position: relative;
     display: inline-block;
     vertical-align: top;
-    background-color: var(--bg);
+    background-color: rgba(255, 255, 255, .5);
     margin-right: 20px;
     margin-bottom: 20px;
     height: 260px;
@@ -107,6 +120,7 @@ html {
     box-shadow: 2px 2px 6px rgba(0, 0, 0, .15);
     cursor: pointer;
     transition: all .2s ease-in-out;
+    backdrop-filter: blur(10px);
 }
 
 .card-icon-div {
@@ -156,4 +170,21 @@ html {
     color: #666;
     text-align: center;
     padding-top: 20px;
+}
+
+.div-button {
+    width: 150px;
+    text-align: center;
+    padding: 5px 10px;
+    background: rgba(255, 255, 255, .5);
+    border-radius: 10px;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, .15);
+    display: inline-block;
+    margin: 10px;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+.div-button:hover {
+    background: rgba(255, 255, 255, .7);
 }
